# eth-digger

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
balance_and_pubkey/: main.py
extract_wallets/: main.py  validate_wallets.py  wrapper.py
public_keys/: main.py
src/: csv_wrapper.py  eth-digger.py  extract_pubkeys.py  select_balances_until_2018.sql  select_balances_until_2023.sql
src/bq-sql/: select_balances_until_2018.sql  select_balances_until_2023.sql
src/cache/: block-number.json  transactions.csv
src/eth_account/: account.py
src/extract_wallets/: validate_wallets.py
src/fileio/: csv.py  exceptions.py  jsonl.py
src/gui/: pubkeys_gui.py
src/utils/: conert_to_csv.py
tests/: export_balance_transaction.py
